# kafkaman

./: Cargo.toml
src/: main.rs
